--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     </svg>
                 </a>
                 <button class="header__btn">
-                    BUY
+                    КУПИТИ
                 </button>
                 <a class="haeder__phone" href="tel:+380734188633">+380 73 41 88 633</a>
             </div>
@@ -36,14 +36,14 @@
                         RAY AIR POCKET
                     </h1>
                     <p class="header__text">
-                        НАЙКРАЩА SUP BOARD
+                        НАЙКРАЩИЙ SUP BOARD
                     </p>
                     <p class="header__text">
                         РОЗМІР: 11'6"X31"
                     </p>
                 </div>
-                <p class="header__decor-text header__decor-text--one">DOM</p>
-                <p class="header__decor-text header__decor-text--two">FREE</p>
+                <p class="header__decor-text header__decor-text--one">ВОЛЯ</p>
+                <p class="header__decor-text header__decor-text--two">СВІТ</p>
                 <p class="header__decor-text header__decor-text--three">
                   МАЛЕНЬКИЙ НАБІР ДЛЯ ВЕЛИКИХ ПРИГОД
                 </p>
@@ -81,11 +81,11 @@
                     </div>
                     <div class="info__specs">
                         <h3 class="info__specs-title title">
-                            SPECS
+                          СПЕЦИФІКАЦІЯ
                         </h3>
                         <ul class="info__specs-list">
                             <li class="info__specs-item">
-                                <p class="info__specs-caption">BOARD</p>
+                                <p class="info__specs-caption">ДОШКА</p>
                                 <p class="info__specs-text">RAY AIR POCKET 11'6"X31"</p>
                             </li>
                             <li class="info__specs-item">
@@ -156,10 +156,10 @@
                                 <p class="buy__item-text">Extremely portable, the ultimate travel companion</p>
                             </li>
                             <div class="buy__price">
-                                590 €
+                                900$
                             </div>
                         </ul>
-                        <button class="buy__btn">buy</button>
+                        <button class="buy__btn">КУПИТИ</button>
                     </div>
                     <img class="buy__img" src="images/sup-full.jpg" alt="">
                 </div>
@@ -229,11 +229,11 @@
                     <div class="footer__top">
                         <form class="footer__form">
                             <h3 class="footer__title title">
-                                CONTACT US
+                                КОНТАКТИ
                             </h3>
                             <input class="footer__form-input" type="text" placeholder="NAME">
                             <input class="footer__form-input" type="email" placeholder="E-MAIL">
-                            <button class="footer__form-btn" type="submit">SEND</button>
+                            <button class="footer__form-btn" type="submit">НАДІШЛІТЬ</button>
                         </form>
                         <a class="footer__logo" href="#">
                             <svg width="371" height="81" viewBox="0 0 371 81" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -264,7 +264,7 @@
                             <a class="footer__menu-link" href="#">PRIVACY STATEMENTS</a>
                         </li>
                         <li class="footer__menu-item">
-                            <a class="footer__menu-link" href="#">CONTACT</a>
+                            <a class="footer__menu-link" href="#">КОНТАКТИ</a>
                         </li> 
                     </ul>
                 </div>
