--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                         </button>
                         <div class="technology__top-box">
                             <h3 class="technology__title title">
-                                MICRO TECHNOLOGY
+                                КОСМІЧНІ ТЕХНОЛОГІЇ
                             </h3>
                             <ol class="technology__list">
                                 <li class="technology__list-item">First PVC rail layer</li>
@@ -215,7 +215,7 @@
                             <img class="gallery-max__img gallery-max__img--3" src="images/gmax-3.jpg" alt="">
                             <img class="gallery-max__img gallery-max__img--4" src="images/gmax-4.jpg" alt="">
                             <img class="gallery-max__img gallery-max__img--5" src="images/gmax-5.jpg" alt="">
-                            <p class="gallery-max__text">ENJOY <br> YOUR LIFE</p>
+                            <p class="gallery-max__text">НАСОЛОДА <br> ЖИТТЯМ</p>
                             <img class="gallery-max__img gallery-max__img--6" src="images/gmax-6.jpg" alt="">
                         </div> 
                     </div>
@@ -267,6 +267,15 @@
                             <a class="footer__menu-link" href="#">КОНТАКТИ</a>
                         </li> 
                     </ul>
+                </div>
+                <div class="footer-copyright">
+                  <a
+                    href="https://github.com/NovikoffOleh"
+                    class="name"
+                    target="_blank"
+                  >
+                    <p>© 2023 OlehNovikoff</p>
+                  </a>
                 </div>
             </div>
         </footer> 
